src duplication error

--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -1,8 +1,86 @@
+/**
+ * @license
+ * MyFonts Webfont Build ID 3642094, 2018-09-15T13:41:29-0400
+ *
+ * The fonts listed in this notice are subject to the End User License
+ * Agreement(s) entered into by the website owner. All other parties are
+ * explicitly restricted from using the Licensed fonts(s).
+ *
+ * You may obtain a valid license at the URLs below.
+ *
+ * Webfont: Gordita-Light by Linotype
+ * URL: https://www.myfonts.com/../../assets/fonts/linotype/avenir-next-pro/pro-light/
+ * Copyright: Copyright &#x00A9; 2012 - 2017 Monotype GmbH. All rights reserved.
+ *
+ * Webfont: Gordita-Medium by Linotype
+ * URL: https://www.myfonts.com/../../assets/fonts/linotype/avenir-next-pro/pro-medium/
+ * Copyright: Copyright &#x00A9; 2004 - 2017 Monotype GmbH. All rights reserved.
+ *
+ * Webfont: Gordita-Regular by Linotype
+ * URL: https://www.myfonts.com/../../assets/fonts/linotype/avenir-next-pro/pro-regular/
+ * Copyright: Copyright &#x00A9; 2004 - 2017 Monotype GmbH. All rights reserved.
+ *
+ *
+ * License: https://www.myfonts.com/viewlicense?type=web&buildid=3642094
+ * Licensed pageviews: 500,000
+ *
+ * © 2018 MyFonts Inc
+*/
+
+
+@font-face {
+	font-family: 'Gordita-Light';
+	src: url('../../assets/fonts/gordita-light.eot');
+	src: url('../../assets/fonts/gordita-light.eot?#iefix') format('embedded-opentype'),
+             url('../../assets/fonts/gordita-light.woff2') format('woff2'),
+	     url('../../assets/fonts/gordita-light.woff') format('woff'),
+	     url('../../assets/fonts/gordita-light.ttf') format('truetype'),
+	     url('../../assets/fonts/gordita-light.svg#youworkforthem') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gordita-Regular';
+	src: url('../../assets/fonts/gordita-regular.eot');
+	src: url('../../assets/fonts/gordita-regular.eot?#iefix') format('embedded-opentype'),
+             url('../../assets/fonts/gordita-regular.woff2') format('woff2'),
+	     url('../../assets/fonts/gordita-regular.woff') format('woff'),
+	     url('../../assets/fonts/gordita-regular.ttf') format('truetype'),
+	     url('../../assets/fonts/gordita-regular.svg#youworkforthem') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gordita-Medium';
+	src: url('../../assets/fonts/gordita-medium.eot');
+	src: url('../../assets/fonts/gordita-medium.eot?#iefix') format('embedded-opentype'),
+             url('../../assets/fonts/gordita-medium.woff2') format('woff2'),
+	     url('../../assets/fonts/gordita-medium.woff') format('woff'),
+	     url('../../assets/fonts/gordita-medium.ttf') format('truetype'),
+	     url('../../assets/fonts/gordita-medium.svg#youworkforthem') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
+@font-face {font-family: 'DroidSansMonoSlashed';src: url('../../assets/fonts/DroidSansMonoSlashed.ttf');}
+
+/*@font-face {font-family: 'GoogleSans-Regular';src: url('../../assets/fonts/GoogleSans-Regular.ttf');}
+@font-face {font-family: 'GoogleSans-Medium';src: url('../../assets/fonts/GoogleSans-Medium.ttf');}
+@font-face {font-family: 'GoogleSans-Bold';src: url('../../assets/fonts/GoogleSans-Bold.ttf');}*/
+
+@font-face {font-family: 'CompassSans-Regular';src: url('../../assets/fonts/CompassSans-Regular.woff2');}
+@font-face {font-family: 'CompassSans-Medium';src: url('../../assets/fonts/CompassSans-Medium.woff2');}
+@font-face {font-family: 'CompassSans-Bold';src: url('../../assets/fonts/CompassSans-Bold.woff2');}
+
+
 @font-face {
   font-family: "Font Awesome 5 Brands";
   font-style: normal;
   font-weight: normal;
-  src: url("https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-brands-400.woff2) format("woff2"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-brands-400.woff) format("woff"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-brands-400.ttf) format("truetype"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-brands-400.svg#fontawesome) format("svg");
+  src: url("https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-brands-400.woff2) format("woff2"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-brands-400.woff) format("woff"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-brands-400.ttf) format("truetype"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-brands-400.svg#fontawesome) format("svg");
 }
 
 .fab {
@@ -12,7 +90,7 @@
   font-family: "Font Awesome 5 Pro";
   font-style: normal;
   font-weight: 400;
-  src: url("https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-regular-400.woff2) format("woff2"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-regular-400.woff) format("woff"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-regular-400.ttf) format("truetype"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-regular-400.svg#fontawesome) format("svg");
+  src: url("https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-regular-400.woff2) format("woff2"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-regular-400.woff) format("woff"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-regular-400.ttf) format("truetype"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-regular-400.svg#fontawesome) format("svg");
 }
 
 .far {
@@ -22,7 +100,7 @@
   font-family: "Font Awesome 5 Pro";
   font-style: normal;
   font-weight: 900;
-  src: url("https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-solid-900.woff2) format("woff2"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-solid-900.woff) format("woff"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-solid-900.ttf) format("truetype"),url(https://pro.fontawesome.com/releases/v5.3.1/webfonts/fa-solid-900.svg#fontawesome) format("svg");
+  src: url("https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.woff2) format("woff2"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.woff) format("woff"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.ttf) format("truetype"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.svg#fontawesome) format("svg");
 }
 
 .fa,
