--- a/src/less/post.less
+++ b/src/less/post.less
@@ -417,16 +417,12 @@
 
 		a {
 			color: @theme-color;
+			font-family: 'Gordita-Regular';
 		}
 
 		img {
 			border: 1px solid #cecece;
 			width: 99%;
-		}
-
-		a {
-			font-family: 'Gordita-Regular';
-			font-size: 16px;
 		}
 
 		li {
@@ -465,6 +461,10 @@
 		@media(max-width: 800px) {
 			margin: 10px 35px;
 		}
+		@media(max-width: 600px) {
+			margin: 10px 25px;
+		}
+
 	}
 
 	.post-header {
