--- a/src/less/table.less
+++ b/src/less/table.less
@@ -30,7 +30,7 @@ table {
       min-width: 30px;
 
       &::before{
-        font-family: Gordita-Medium!important;
+         font-family: Gordita-Medium!important;
       }
     }
   }
@@ -187,8 +187,7 @@ td, th{
     text-align: center;
 }
 
-.tableContainer,
-.post-content div {
+.tableContainer {
   @media (max-width: 600px){
     margin-left: calc(~"-50vw + 50%");
     margin-right: calc(~"-50vw + 50%");
