--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -29,6 +29,7 @@
 @import 'comments.less';
 @import 'signup.less';
 @import 'author-card.less';
+@import 'fonts.less';
 
 /*====================================================
 	about author and comment and next-prev link
