--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -27,8 +27,8 @@
 			-webkit-line-clamp: 7;
 			-webkit-box-orient: vertical;
 			font-family: 'Gordita-Regular',sans-serif !important;
-			line-height: 1.6em;
-			font-size: 1em;
+			line-height: 1.55;
+			font-size: .9em;
 			font-weight: 500;
 			color: #2d2f35;
 			@media(max-width: 600px) {
@@ -50,6 +50,7 @@
 		overflow: hidden;
 		margin: auto;
 		background-size: cover !important;
+		box-shadow: 0 0 8px rgba(93, 97, 140, .35);
 	}
 
 	.postimage {
