--- a/src/less/code.less
+++ b/src/less/code.less
@@ -40,8 +40,8 @@ p > code {
   display: inline;
   overflow-y: visible !important;
   width: fit-content;
-  background: #65676f;
-  padding: 5px 8px;
+  background: #4e515f;
+  padding: 3px 6px;
   border-radius: 2px;
   color: #c4f5ff;
   font-weight: 500;
@@ -137,10 +137,10 @@ code {
     content: "\f3e2";
   }
 */
-  .hljs-addition,
-  .hljs-meta-string,
-  .hljs-regexp,
-  .hljs-string,
+  .addition,
+  .meta-string,
+  .regexp,
+  .string,
   .addition,
   .meta-string,
   .regexp,
@@ -148,30 +148,34 @@ code {
     color: #93DCB8;
   }
 
+  .params {
+    color: #ecb357;
+  }
+
   .comment {
     color:#656d82;
   }
 
-  .hljs-attribute,
+  .attribute,
   .attribute, {
     color: #d8b061;
   }
 
-  .hljs-class,
-  .hljs-title,
+  .class,
+  .title,
   .class,
   .title {
     color: #ffd712;
     font-weight: 700;
   }
 
-  .hljs-attr,
-  .hljs-number,
-  .hljs-selector-attr,
-  .hljs-selector-pseudo,
-  .hljs-template-variable,
-  .hljs-type,
-  .hljs-variable,
+  .attr,
+  .number,
+  .selector-attr,
+  .selector-pseudo,
+  .template-variable,
+  .type,
+  .variable,
   .attr,
   .number,
   .selector-attr,
@@ -182,11 +186,12 @@ code {
     color: #bc82d8;
   }
 
-  .hljs-function,
+  .function,
   .function {
-    .hljs-keyword,
+    .keyword,
      .keyword {
-      color: #d667c1;
+      /*color: #d667c1;*/
+      color: #00b1d5;
     }
   }
 }
@@ -195,57 +200,57 @@ code {
   background: #242c38;
 
 
-  .hljs-keyword,
-  .hljs-selector-tag,
-  .hljs-literal,
-  .hljs-section,
-  .hljs-link {
+  .keyword,
+  .selector-tag,
+  .literal,
+  .section,
+  .link {
     color: #8be9fd;
   }
 
-  .hljs-function .hljs-keyword {
+  .function .keyword {
     color: #ff79c6;
   }
 
   .hljs,
-  .hljs-subst {
+  .subst {
     color: #f8f8f2;
   }
 
-  .hljs-string,
-  .hljs-title,
-  .hljs-name,
-  .hljs-type,
-  .hljs-attribute,
-  .hljs-symbol,
-  .hljs-bullet,
-  .hljs-addition,
-  .hljs-variable,
-  .hljs-template-tag,
-  .hljs-template-variable {
+  .string,
+  .title,
+  .name,
+  .type,
+  .attribute,
+  .symbol,
+  .bullet,
+  .addition,
+  .variable,
+  .template-tag,
+  .template-variable {
     color: #f1fa8c;
   }
 
-  .hljs-comment,
-  .hljs-quote,
-  .hljs-deletion,
-  .hljs-meta {
+  .comment,
+  .quote,
+  .deletion,
+  .meta {
     color: #6272a4;
   }
 
-  .hljs-keyword,
-  .hljs-selector-tag,
-  .hljs-literal,
-  .hljs-title,
-  .hljs-section,
-  .hljs-doctag,
-  .hljs-type,
-  .hljs-name,
-  .hljs-strong {
+  .keyword,
+  .selector-tag,
+  .literal,
+  .title,
+  .section,
+  .doctag,
+  .type,
+  .name,
+  .strong {
     font-weight: bold;
   }
 
-  .hljs-emphasis {
+  .emphasis {
     font-style: italic;
   }
 
@@ -275,42 +280,42 @@ code {
   margin: 0;
 }
 
-.hljs-comment,
-.hljs-quote {
+.comment,
+.quote {
   color: #6a6c6f;
 }
 
-.hljs-doctag,
-.hljs-formula,
-.hljs-keyword {
+.doctag,
+.formula,
+.keyword {
   color: #00b1d5;
   font-weight: 600;
 }
 
-.hljs-literal {
+.literal {
   color: #56b6c2;
 }
 
-.hljs-built_in,
-.hljs-class .hljs-title {
+.built_in,
+.class .title {
   color: #2db1a1;
 }
 
-.hljs-bullet,
-.hljs-link,
-.hljs-meta,
-.hljs-selector-id,
-.hljs-symbol,
-.hljs-title {
+.bullet,
+.link,
+.meta,
+.selector-id,
+.symbol,
+.title {
   color: #61aeee;
 }
 
 .json {
-  .hljs-attr {
+  .attr {
     color: #e471a6;
   }
 
-  .hljs-string {
+  .string {
     color: #c39dea;
   }
 
@@ -332,11 +337,11 @@ code {
   }
 }
 
-.hljs-strong {
+.strong {
   font-weight: bold;
 }
 
-.hljs-link {
+.link {
   text-decoration: underline;
 }
 
@@ -385,72 +390,72 @@ code {
     background: #282c34;
   }
 
-  .hljs-comment,
-  .hljs-quote {
+  .comment,
+  .quote {
     color: #5c6370;
     font-style: italic;
   }
 
-  .hljs-doctag,
-  .hljs-keyword,
-  .hljs-formula {
+  .doctag,
+  .keyword,
+  .formula {
     color: #c678dd;
   }
 
-  .hljs-section,
-  .hljs-name,
-  .hljs-selector-tag,
-  .hljs-deletion,
-  .hljs-subst {
+  .section,
+  .name,
+  .selector-tag,
+  .deletion,
+  .subst {
     color: #e06c75;
   }
 
-  .hljs-literal {
+  .literal {
     color: #56b6c2;
   }
 
-  .hljs-string,
-  .hljs-regexp,
-  .hljs-addition,
-  .hljs-attribute,
-  .hljs-meta-string {
+  .string,
+  .regexp,
+  .addition,
+  .attribute,
+  .meta-string {
     color: #98c379;
   }
 
-  .hljs-built_in,
-  .hljs-class .hljs-title {
+  .built_in,
+  .class .title {
     color: #e6c07b;
   }
 
-  .hljs-attr,
-  .hljs-variable,
-  .hljs-template-variable,
-  .hljs-type,
-  .hljs-selector-class,
-  .hljs-selector-attr,
-  .hljs-selector-pseudo,
-  .hljs-number {
+  .attr,
+  .variable,
+  .template-variable,
+  .type,
+  .selector-class,
+  .selector-attr,
+  .selector-pseudo,
+  .number {
     color: #d19a66;
   }
 
-  .hljs-symbol,
-  .hljs-bullet,
-  .hljs-link,
-  .hljs-meta,
-  .hljs-selector-id,
-  .hljs-title {
+  .symbol,
+  .bullet,
+  .link,
+  .meta,
+  .selector-id,
+  .title {
     color: #61aeee;
   }
 
-  .hljs-emphasis {
+  .emphasis {
     font-style: italic;
   }
 
-  .hljs-strong {
+  .strong {
     font-weight: bold;
   }
 
-  .hljs-link {
+  .link {
     text-decoration: underline;
   }
 
@@ -482,7 +487,7 @@ code {
   background: #373b41;
 }
 
-.hljs-string {
+.string {
   color: #5C9AF4;
 }
 
@@ -497,75 +502,75 @@ code {
 }
 
 /*color: fg_yellow*/
-.hljs-title,
-.hljs-name {
+.title,
+.name {
   color: #f0c674;
 }
 
 /*color: fg_comment*/
-.hljs-comment,
-.hljs-meta,
-.hljs-meta .hljs-keyword {
+.comment,
+.meta,
+.meta .keyword {
   color: #707880;
 }
 
 /*color: fg_red*/
-.hljs-number,
-.hljs-symbol,
-.hljs-literal,
-.hljs-deletion,
-.hljs-link {
+.number,
+.symbol,
+.literal,
+.deletion,
+.link {
  color: #cc6666
 }
 
 /*color: fg_green*/
-.hljs-string,
-.hljs-doctag,
-.hljs-addition,
-.hljs-regexp,
-.hljs-selector-attr,
-.hljs-selector-pseudo {
+.string,
+.doctag,
+.addition,
+.regexp,
+.selector-attr,
+.selector-pseudo {
   color: #87e8db;
 }
 
 /*color: fg_purple*/
-.hljs-attribute,
-.hljs-code,
-.hljs-selector-id {
+.attribute,
+.code,
+.selector-id {
  color: #b294bb;
 }
 
 /*color: fg_blue*/
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-bullet,
-.hljs-tag {
+.keyword,
+.selector-tag,
+.bullet,
+.tag {
  color: #79bbf3;
 }
 
 /*color: fg_aqua*/
-.hljs-subst,
-.hljs-variable,
-.hljs-template-tag,
-.hljs-template-variable {
+.subst,
+.variable,
+.template-tag,
+.template-variable {
   color: #8abeb7;
 }
 
 /*color: fg_orange*/
-.hljs-type,
-.hljs-built_in,
-.hljs-builtin-name,
-.hljs-quote,
-.hljs-section,
-.hljs-selector-class {
+.type,
+.built_in,
+.builtin-name,
+.quote,
+.section,
+.selector-class {
   color: #de935f;
 }
 
-.hljs-emphasis {
+.emphasis {
   font-style: italic;
 }
 
-.hljs-strong {
+.strong {
   font-weight: bold;
 }
   &::before {
@@ -595,72 +600,72 @@ code {
     background: #282c34;
   }
 
-  .hljs-comment,
-  .hljs-quote {
+  .comment,
+  .quote {
     color: #5c6370;
     font-style: italic;
   }
 
-  .hljs-doctag,
-  .hljs-keyword,
-  .hljs-formula {
+  .doctag,
+  .keyword,
+  .formula {
     color: #c678dd;
   }
 
-  .hljs-section,
-  .hljs-name,
-  .hljs-selector-tag,
-  .hljs-deletion,
-  .hljs-subst {
+  .section,
+  .name,
+  .selector-tag,
+  .deletion,
+  .subst {
     color: #e06c75;
   }
 
-  .hljs-literal {
+  .literal {
     color: #56b6c2;
   }
 
-  .hljs-string,
-  .hljs-regexp,
-  .hljs-addition,
-  .hljs-attribute,
-  .hljs-meta-string {
+  .string,
+  .regexp,
+  .addition,
+  .attribute,
+  .meta-string {
     color: #98c379;
   }
 
-  .hljs-built_in,
-  .hljs-class .hljs-title {
+  .built_in,
+  .class .title {
     color: #e6c07b;
   }
 
-  .hljs-attr,
-  .hljs-variable,
-  .hljs-template-variable,
-  .hljs-type,
-  .hljs-selector-class,
-  .hljs-selector-attr,
-  .hljs-selector-pseudo,
-  .hljs-number {
+  .attr,
+  .variable,
+  .template-variable,
+  .type,
+  .selector-class,
+  .selector-attr,
+  .selector-pseudo,
+  .number {
     color: #d19a66;
   }
 
-  .hljs-symbol,
-  .hljs-bullet,
-  .hljs-link,
-  .hljs-meta,
-  .hljs-selector-id,
-  .hljs-title {
+  .symbol,
+  .bullet,
+  .link,
+  .meta,
+  .selector-id,
+  .title {
     color: #61aeee;
   }
 
-  .hljs-emphasis {
+  .emphasis {
     font-style: italic;
   }
 
-  .hljs-strong {
+  .strong {
     font-weight: bold;
   }
 
-  .hljs-link {
+  .link {
     text-decoration: underline;
   }
 
