--- a/src/less/table.less
+++ b/src/less/table.less
@@ -12,6 +12,7 @@ table {
   border-spacing: 0;
   margin: 20px 0 40px;
   box-shadow: 1px 1px 4px #dbddec;
+  border: 1px solid rgba(77, 87, 109, 0.25);
 
   @media(max-width: 600px) {
     display: block !important;
