--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -136,7 +136,7 @@
 
   .pandas {
     color: #c03694 !important;
-    background-color: lighten(#c03694, 50%);
+    background-color: #f9ebf3;
 
     * {
       color: #c03694 !important;
