post adjustments code

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -40,10 +40,10 @@ p > code {
   display: inline;
   overflow-y: visible !important;
   width: fit-content;
-  background: #4e515f;
-  padding: 3px 6px;
+  background: rgba(197, 205, 245, 0.30196078431372547);
+  padding: 2px 6px;
   border-radius: 2px;
-  color: #c4f5ff;
+  color: #0e9bb5;
   font-weight: 500;
 }
 
@@ -68,7 +68,7 @@ code {
   margin: 0;
   font-weight: 200;
   line-height: 1.7;
-  padding: 0 30px 30px;
+  padding: 0 30px 20px;
   white-space: pre-wrap !important;
   color: #d3dce0;
 
