--- a/src/less/post.less
+++ b/src/less/post.less
@@ -845,8 +845,8 @@
 			span {
 				display: block;
 				line-height: 1em;
-				margin-bottom: 10px;
-				font-size: 0.9em;
+				margin-bottom: 8px;
+				font-size: .8em;
 
 				i {
 					margin-right: 8px;
