--- a/index.hbs
+++ b/index.hbs
@@ -10,7 +10,7 @@
 				<!-- start main post area -->
 				<div class="col-md-8 main-content">
 					<div class="postlist">
-						{{#get "posts" include="tags,authors"}}{{> loop}}{{/get}} {{pagination}}
+						{{> loop}} {{pagination}}
 					</div>
 				</div>
 		</div>
