series and search styles

--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -256,12 +256,12 @@
         align-items: left;
         height: fit-content;
         flex-direction: column;
-        min-height: 83px;
+        min-height: 115px;
 
         h2 {
           color: #37363e;
           font-size: 1.1em;
-          line-height: 1;
+          line-height: 1.2;
           margin: 0;
           font-weight: 600;
           font-family: Gordita-Regular;
@@ -270,7 +270,7 @@
         p {
           font-size: .8em;
           color: @text-color;
-          margin: 9px 0 0;
+          margin: 5px 0 5px;
           line-height: 1.5;
           text-align: left;
           font-weight: 100;
