--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -14,7 +14,7 @@
 	{{/if}}
 	{{!--{{#if feature_image}}<div style="background:url('{{feature_image}}');" class="tag-image"></div>{{/if}}--}}
 	</div>
-	{{#else}}
+	{{else}}
 		<div class="cover">
 			<h3 class="tag-name">
 				<i class="fal fa-tag"></i> {{name}}
