--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -283,6 +283,8 @@
           line-height: 1.5;
           color: #37363F;
           text-algin: right;
+          position: absolute;
+          bottom: 15px;
         }
       }
     }
