--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -66,8 +66,14 @@ input {
     -webkit-box-shadow: 0 0 0 100px white inset;
   }
 
+  &:hover{
+    border: 1px solid rgba(255, 255, 255, 0.58)
+  }
+
   &:focus {
     border: 1px solid #c7e4f3 !important;
+    color: white;
+    background: rgba(140, 255, 247, 0.45);
   }
 }
 
@@ -148,7 +154,7 @@ input {
 }
 
 .signup-form input {
-  border: 0 !important;
+  border: 0;
   padding: 14px 15px !important;
   width: 300px !important;
 }
