--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -43,7 +43,7 @@
 	    border-radius: 2px;
 
 			&::placeholder {
-				color: #b5b6c5;
+				color: #9A9AB1;
 			}
 
 			&:hover {
@@ -417,6 +417,10 @@
 			letter-spacing: 1px;
 			margin-top: 0;
 			white-space: nowrap;
+
+			@media(max-width: 1040px){
+				font-size: 1.3em;
+			}
 		}
 
 		p {
@@ -457,7 +461,7 @@
 	}
 
 	.title {
-		font-size: 1.12em;
+		font-size: 1.25em;
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
