--- a/transactional.hbs
+++ b/transactional.hbs
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/MyFontsWebfontsKit.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 </head>
-<body  class="transactional">
+<body class="transactional">
 <!-- start site's main content area -->
 <section>
 	<div class="container">
@@ -21,4 +21,6 @@
 	</div>
 	<!-- end main post area -->
 </section>
+</body>
+</html>
 <!-- end site's main content area -->
