--- a/author.hbs
+++ b/author.hbs
@@ -7,7 +7,7 @@
 			{{! insert sidebar partial}}
 			{{> author-sidebar}}
 			<!-- start main post area -->
-			<div class="col-md-8 main-content">
+			<div class=" main-content">
 				{{> cover-author}}
 				<div class="postlist">
 				{{> loop}}
