--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -8,7 +8,7 @@
 			<!-- start main post area -->
 
 			{{> sidebar}}
-			<div class="col-md-8 main-content">
+			<div class=" main-content">
 				<!-- start post -->
 				{{#post}}
 					<article class="{{post_class}}">
