--- a/post.hbs
+++ b/post.hbs
@@ -8,7 +8,7 @@
 		<div class="row">
 			{{#post}}
 			<!-- start main post area -->
-			<div class="col-md-8 main-content">
+			<div class=" main-content">
 				<!-- start post -->
 
 				<article class="{{post_class}} post-page">
