--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -7,7 +7,7 @@
 		<div class="row">
 			<!-- start main post area -->
 			{{> sidebar}}
-			<div class="col-md-8 main-content">
+			<div class=" main-content">
 				<!-- start post -->
 				{{#post}}
 					<article class="{{post_class}}">
