--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -7,7 +7,7 @@
 		<div class="row">
 			<!-- start main post area -->
 			{{> sidebar}}
-			<div class="col-md-8 main-content">
+			<div class=" main-content">
 				<!-- start post -->
 				{{#post}}
 					<article class="{{post_class}}">
@@ -27,16 +27,16 @@
 								{{#foreach tags}}
 									<div class="tag-wrapper">
 										<a href="{{url}}">
-											<div class="img-wrapper {{#unless feature_image}}no-image{{/unless}}" {{#if feature_image}} style="background-image: url({{feature_image}});"{{/if}} ></div>
-													<div class="description">
-														<h2>{{meta_title}}</h2>
-														<p>{{description}}</p>
-														<span>{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>
-													</div>
+											<div class="img-wrapper {{#unless feature_image}}no-image{{/unless}}" {{#if feature_image}} style="background-image: url({{feature_image}});" {{/if}}></div>
+											<div class="description">
+												<h2>{{meta_title}}</h2>
+												<p>{{description}}</p>
+												<span class="postcount">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>
+											</div>
 										</a>
 									</div>
-						{{/foreach}}
-						{{/get}}
+								{{/foreach}}
+							{{/get}}
 						</div>
 			</div>
 			</article>
