--- a/index.hbs
+++ b/index.hbs
@@ -8,7 +8,7 @@
 			{{! insert sidebar partial}}
 			{{> sidebar}}
 				<!-- start main post area -->
-				<div class="col-md-8 main-content">
+				<div class=" main-content">
 					<div class="postlist">
 						{{#get "posts" include="tags,authors"}}{{> loop}} {{pagination}} {{/get}}
 					</div>
