--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -1,7 +1,7 @@
 {{! Series Page with background image}}
 {{#tag}}
 	{{#if feature_image}}
-		<div class="cover tag-cover" style="background-image: url({{feature_image}});">
+		<div class="cover tag-cover series-cover" style="background-image: url({{feature_image}});">
 	<h3 class="tag-name">
 		<i class="fal fa-tag"></i> {{name}}
 	</h3>
