--- a/tag.hbs
+++ b/tag.hbs
@@ -7,7 +7,7 @@
 			{{! insert sidebar partial}}
 			{{> sidebar}}
 			<!-- start main post area -->
-			<div class="col-md-8 main-content">
+			<div class=" main-content">
 				<div class="postlist">
 				{{> cover-tag}}
 				{{> loop}}
