--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -20,4 +20,8 @@
     <!--<a class="float-left">Need help?</a>-->
     <a class="float-right">Sign In</a>
   </div>
+
+  <!-- confirmation -->
+  <h2 class="confirm-head" style="visibility:hidden;">CONGRATS</h2>
+  <p class="confirm-description" style="visibility: hidden;">Check your email. Welcome to your new life.</p>
 </div>
