--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -11,7 +11,8 @@
   box-shadow: 0 0 24px 0 rgba(0,0,0,0.1);
   z-index: 500;
 
-  .description {
+  .description,
+  .confirm-description {
     color: white;
     width: 258px;
     margin: 30px auto auto;
@@ -223,7 +224,8 @@ button {
   bottom: 3%;
 }
 
-.signup-head {
+.signup-head,
+.confirm-head {
   margin: auto;
   display: block;
   left: 0;
