--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -28,6 +28,13 @@
   }
 }
 
+.confirm-description {
+  top: 280px !important;
+  width: 274px !important;
+  line-height: 1.5;
+  margin: 0 auto auto !important;
+}
+
 .signup #logo {
   height: 200px;
   max-width: 50px;
@@ -239,6 +246,10 @@ button {
   display: block;
   width: fit-content;
   margin-top: 40px;
+}
+
+.confirm-head {
+  margin-top: 20px;
 }
 
 .tr {
