--- a/custom-signup-confirm.hbs
+++ b/custom-signup-confirm.hbs
@@ -22,7 +22,7 @@
 	<!-- start site's main content area -->
 		{{#post}}
 				<!-- start post -->
-				<div class="card signup">
+				<div class="card">
 					<div class="">
 						<h1>{{{title}}}</h1>
 						<div class="post-content">
