--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -26,11 +26,12 @@
     right: 0;
     top: 0;
     bottom: 0;
-    padding: 0 0 30px;
+    padding: 30px;
     text-align: center;
 
     p {
-      margin: 20px 25px;
+      margin: 20px 25px 30px;
+      line-height: 1.5;
     }
 
     input {
