--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -72,7 +72,7 @@
   </div>
 </div>
 <script>
-stitchClient.callFunction("FullAuthorDetails").then(result => {
+client.callFunction("FullAuthorDetails").then(result => {
 
 
 	for (var i = 0; i < result.length; i++) {
