--- a/partials/widget-medium.hbs
+++ b/partials/widget-medium.hbs
@@ -25,8 +25,8 @@ function createMediumCard(medium){
 }
 
 
-stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
-  stitchClient.callFunction("getGithubUsers", "{{slug}}").then(result => {
+client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
+  client.callFunction("getGithubUsers", "{{slug}}").then(result => {
     createMediumCard(result.medium)
   });
 });
