testing index.js

--- a/custom-signup-confirm.hbs
+++ b/custom-signup-confirm.hbs
@@ -39,7 +39,7 @@
 	const token = params.get('token');
 	const tokenId = params.get('tokenId');
 
-	return emailPassClient.confirmUser(token, tokenId);
+	return emailPasswordClient.confirmUser(token, tokenId);
 	})();
 </script>
 </body>
