--- a/custom-signup-confirm.hbs
+++ b/custom-signup-confirm.hbs
@@ -37,11 +37,11 @@
     Stitch,
     UserPasswordAuthProviderClient
   } = stitch;
-	
+
   const APP_ID = "hackers-uangn";
   const stitchClient = Stitch.initializeDefaultAppClient(APP_ID);
 
-  const emailPasswordClient = stitchClient.auth.getProviderClient(UserPasswordAuthProviderClient.factory, "userpass");
+  const emailPasswordClient = stitchClient.auth.getProviderClient(UserPasswordAuthProviderClient.factory);
 
   const params = new URLSearchParams(window.location.search);
   const token = params.get('token');
