create account issues

--- a/custom-signup-confirm.hbs
+++ b/custom-signup-confirm.hbs
@@ -55,7 +55,7 @@
   function displayResult(result, err) {
     const message = document.getElementById("message");
     if (result === "success") {
-      message.innerText = "Successfully confirmed quickstart user. You may close this page.";
+      message.innerText = "Successfully created user. You may close this page.";
     }
     else if (result === "error") {
       message.innerText = "Unable to register user.\n\n" + err;
