--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -13,7 +13,7 @@
     <!--<input id="username" class="form-control tr" placeholder="Username" type="text">-->
     <input id="signup-email" class="form-control tr" placeholder="Email" type="text" autocomplete="email">
     <input id="signup-password" class="form-control tr" placeholder="Password" type="password" autocomplete="new-password">
-    <input id="confirm-password" class="form-control tr" placeholder="Repeat Password" type="password" autocomplete="new-password">
+    <input id="confirm-password" class="form-control tr" placeholder="Confirm Password" type="password" autocomplete="new-password">
     <button type="button" id="signup-button" class="form-control button-control tr">CREATE ACCOUNT</button>
   </form>
 
