--- a/src/less/post.less
+++ b/src/less/post.less
@@ -436,6 +436,7 @@
 			padding: 0 20px 20px;
 			margin-bottom: 20px;
 			font-size: .9em;
+			line-height: 1.7;
 
 			&::before {
 		    margin-bottom: 11px;
