--- a/src/less/code.less
+++ b/src/less/code.less
@@ -72,6 +72,10 @@ code {
   white-space: pre-wrap !important;
   color: #d3dce0;
 
+  @media(max-width: 600px){
+    padding: 0 20px 20px;
+  }
+
   &::before {
     margin-bottom: 11px;
     margin-left: -40px;
