--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -17,6 +17,10 @@
 		height: fit-content;
 	}
 
+	@media(max-width: 800px) {
+		padding-bottom: 0;
+	}
+
 	.tag-list {
 		width: 40%;
 		height: 100%;
