misc style errors

--- a/src/less/author-card.less
+++ b/src/less/author-card.less
@@ -164,7 +164,7 @@
         display: inline;
       }
       @media(max-width: 600px) {
-        display: block !important;
+        display: block;
         width: 100%;
       }
     }
