--- a/src/less/code.less
+++ b/src/less/code.less
@@ -91,7 +91,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 8px 4%;
+    padding: 8px 10%;
     margin-left: -6%;
     font-weight: 700;
 
@@ -133,7 +133,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 8px 20px;
+
     margin-left: -40px;
     font-weight: 700;
   }
@@ -281,7 +281,7 @@ code {
     -webkit-font-smoothing: antialiased;
     position: relative;
     margin-left: -40px;
-    padding: 8px 20px;
+
     font-weight: 700;
   }
 }
@@ -344,7 +344,6 @@ code {
     -webkit-font-smoothing: antialiased;
     position: relative;
     margin-left: -40px;
-    padding: 8px 20px;
     font-weight: 700;
   }
 }
@@ -369,6 +368,7 @@ code {
   cursor: pointer;
   transition: all 0.3s easeout;
   display: none;
+  z-index: 1;
 
   &:hover {
     opacity: 0.7;
@@ -485,7 +485,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 8px 20px;
+
     font-weight: 700;
   }
 }
@@ -598,7 +598,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 8px 20px;
+
     font-weight: 700;
   }
 }
@@ -695,7 +695,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 8px 20px;
+
     font-weight: 700;
   }
 }
@@ -714,7 +714,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 8px 20px;
+
     font-weight: 700;
   }
 }
@@ -733,7 +733,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 8px 20px;
+
     font-weight: 700;
   }
 }
@@ -752,7 +752,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 8px 20px;
+
     font-weight: 700;
   }
 }
@@ -790,7 +790,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    padding: 8px 20px;
+
     font-weight: 700;
   }
 }
