--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -79,7 +79,6 @@
 			margin: auto 0;
 			@media(max-width:900px) {
 				width: fit-content !important;
-				height: fit-content;
 				padding: 10px;
 			}
 			@media(max-width:600px) {
@@ -229,17 +228,12 @@
 		min-width: 220px;
 		margin: 0;
 		height:100%;
-		@media(max-width:900px) {
-			max-width: 80%;
-			margin: 15px auto !important;
-			padding-bottom: 20px;
-		}
 
 		@media(max-width:900px) {
 			max-width: none;
-			width: 100%;
+			max-width: 80%;
 			margin: 15px 0 !important;
-			padding-bottom: 20px;
+			padding-bottom: 0;
 		}
 
 		span {
