--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -1,7 +1,7 @@
 @import "variables.less";
 @import "mixin.less";
 
-.post-header {
+.post-navbar {
   margin: auto;
   position: relative;
   width: auto;
