--- a/partials/postheader.hbs
+++ b/partials/postheader.hbs
@@ -1,5 +1,5 @@
 <!-- start header -->
-<header class="post-header" style="overflow:hidden">
+<header class="post-navbar" style="overflow:hidden">
 	<!-- start logo -->
 	<div class="navcontain">
 		<a class="logo" href="{{@blog.url}}"><img src="{{@blog.logo}}"></a>
