--- a/src/less/page.less
+++ b/src/less/page.less
@@ -5,7 +5,7 @@
   background: #ecf1f9;
   display: inline-block;
 
-  .post-header {
+  .post-navbar {
     display: none;
     padding: 10px 0 0 25px;
     @media(max-width: 800px) {
